@@ -1,3 +1,8 @@
+2008-02-24  Ulrich Mueller  <ulm@gentoo.org>
+
+	* gentoo-syntax.el (ebuild-mode-arch-stable-list)
+	(ebuild-mode-arch-list): Move mips to unstable, remove ppc-macos.
+
 2008-02-21  Ulrich Mueller  <ulm@gentoo.org>
 
 	* ebuild-mode-keywords.el (ebuild-mode-keywords-pam):
